# ClawCodex

./: .clawd-todos.json  .env.example  .gitignore  AGENTS.md  CHECK-KEY.bat  CLAUDE.md  LICENSE  OPEN-KEY-CHECK-WINDOW.bat  PHILOSOPHY.md  README.md  REPO_TREE_AND_PURPOSE.md  START-CLAW.bat  UPDATE-KEY.bat  USAGE.md  build-claw.ps1  chess.html  claw_bootstrap.ps1  clawcodex_chat.py  install.sh  launch-claw.ps1  open-cmd-here.bat  pick-cerebras-model.ps1  pick-deepseek-model.ps1  pick-kimi-model.ps1  pick-lmstudio-model.ps1  pick-zai-model.ps1  run-claw.bat  run-claw.local.ps1  run-claw.ps1  run-server.bat  set-cerebras-key.ps1  set-deepseek-key.ps1  set-kimi-key.ps1  set-lmstudio-settings.ps1  set-openrouter-key.ps1  set-zai-key.ps1  validate-cerebras.ps1  validate-deepseek.ps1  validate-kimi.ps1  validate-lmstudio.ps1  (+3 more)
.claude/: launch.json
.claw/plugins/: installed.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  (+1 more)
docs/: HANDOFF_FINISH_LARGE_REPO_GPT_5_3_CODEX.md  HANDOFF_LARGE_REPO_GPT_5_3_CODEX.md  HANDOFF_LARGE_REPO_IMPLEMENTATION_2026-06-19.md  HANDOFF_NEXT_CODER_LARGE_REPO_2026-06-19.md  LARGE_REPO_BENCHMARK.md  LARGE_REPO_BENCHMARK_RESULTS.md  TOOL_EXECUTION_FAILURE_AUDIT_2026-06-20.md
frontend/: README.md
rust/: PARITY.md  README.md
rust/crates/repo-intel/: Cargo.toml
rust/crates/repo-intel/src/: cache.rs  index.rs  inventory.rs  language.rs  lib.rs  overview.rs  query.rs  schema.rs  test_select.rs
src/: auth.py  cerebras.py  model_client.py  openrouter_client.py
tests/: test_orchestrator_upgrade.py  test_server_auth.py
(+206 files in other folders)
