[package]
name = "repo-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ignore = "0.4"
rayon = "1"
rusqlite = { version = "0.40", features = ["bundled", "modern_sqlite", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"

[lints]
workspace = true
